--- a/combinations.html
+++ b/combinations.html
@@ -18,9 +18,66 @@
 
 	</head>
 	<body style="background-color:#56cccf;">
+		
 
   <div class="container">
+
+		<div class="col-12">
+
+
+								<div class="ui-group align-self-center">
+
+									<div class="button-group js-radio-button-group dim1" data-filter-group="shape">
+										<button class="button is-checked" data-filter="">all</button>
+										<button class="button hover-target" data-filter=".tv">Tv&Series</button>
+										<button class="button hover-target" data-filter=".books">Books</button>
+										<button class="button hover-target" data-filter=".travel">Travel</button>
+										<button class="button b-big hover-target" data-filter=".cooking">Cooking</button>
+										<button class="button hover-target" data-filter=".music">Music</button>
+
+
+									</div>
+								</div>
+							</div>
+							<div class="grid col-12">
+
+	<div class="color-shape tv">
 		<div class="margin">
+		<table class="table">
+		<thead>
+			<tr>
+				<th scope="col">category</th>
+				<th scope="col">action</th>
+				<th scope="col">time</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<th scope="row"><img class="content__img-t" src="img/trip.png"></th>
+				<td class="color-shape tv">Mark</td>
+				<td class="color-shape tv">Otto</td>
+			</tr>
+			<tr>
+				<th scope="row" class="space">2</th>
+				<td class="space">Jacob</td>
+				<td class="space">Thornton</td>
+			</tr>
+			<tr>
+				<th scope="row">3</th>
+				<td class="color-shape music">Larry</td>
+				<td class="color-shape music">the Bird</td>
+			</tr>
+		</tbody>
+	</table>
+	 </div>
+	 </div>
+
+
+						</div>
+
+	</div>
+
+	<!--	<div class="margin">
 		<table class="table">
 	  <thead>
 	    <tr>
@@ -49,7 +106,7 @@
 	</table>
   </div>
 	</div>
-
+-->
 </body>
 		<script src="p5.min.js"></script>
 	 <script src="p5.sound.min.js"></script>
@@ -59,6 +116,7 @@
 		<script src="js/scrollMonitor.js"></script>
 		<script src="js/demo3.js"></script>
 		<script src="js/random.js"></script>
+		<script src="js/archive.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.10.0/rellax.min.js"></script>
 	<script src="https://d3js.org/d3.v6.min.js"></script>
