--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 	<head>
-	
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -86,8 +86,8 @@
 			<div class="content-wrap caso" id="1">
 				<div class="content content--layout content--layout-1">
 			<img class="content__img" src="img/trip.png" alt="Some image" />
-			<p class="content__desc">watch Lord of the Rings Trilogy (extended versions)</p>
-					<h3 class="content__title">26,91 times</h3>
+			<h4 class="content__desc">watch Lord of the Rings Trilogy (extended versions)</h4>
+					<h1 class="content__title">26,91 times</h1>
 		<!--			<p class="content__author">Walter Mastricht</p> -->
 				<br>
 					<a href="#" class="content__link">Film&Series</a>
@@ -154,6 +154,11 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.10.0/rellax.min.js"></script>
 	<script src="https://d3js.org/d3.v6.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/js-yaml/3.14.0/js-yaml.min.js" integrity="sha512-ia9gcZkLHA+lkNST5XlseHz/No5++YBneMsDp1IZRJSbi1YqQvBeskJuG1kR+PH1w7E0bFgEZegcj0EwpXQnww==" crossorigin="anonymous"></script>
+	<!-- jQuery library -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
+	<!-- Latest compiled JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+	<script src="extensions/filter-control/bootstrap-table-filter-control.js"></script>
 	</body>
 </html>
