--- a/combinations.html
+++ b/combinations.html
@@ -18,7 +18,7 @@
 
 	</head>
 	<body style="background-color:#56cccf;">
-		
+
 
   <div class="container">
 
@@ -43,34 +43,14 @@
 
 	<div class="color-shape tv">
 		<div class="margin">
-		<table class="table">
-		<thead>
-			<tr>
-				<th scope="col">category</th>
-				<th scope="col">action</th>
-				<th scope="col">time</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<th scope="row"><img class="content__img-t" src="img/trip.png"></th>
-				<td class="color-shape tv">Mark</td>
-				<td class="color-shape tv">Otto</td>
-			</tr>
-			<tr>
-				<th scope="row" class="space">2</th>
-				<td class="space">Jacob</td>
-				<td class="space">Thornton</td>
-			</tr>
-			<tr>
-				<th scope="row">3</th>
-				<td class="color-shape music">Larry</td>
-				<td class="color-shape music">the Bird</td>
-			</tr>
-		</tbody>
-	</table>
+<div class="row">aaa</div>
 	 </div>
 	 </div>
+	 <div class="color-shape music">
+ 		<div class="margin">
+ <div class="row">bbb</div>
+ 	 </div>
+ 	 </div>
 
 
 						</div>
