--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<div class="grid__item-img"></div>
 				</div>
 				<div id="nope" class="grid__item pos-1 effect-1">
-					<div class="grid__item-img effect-1" style="background-image:url(https://i.ibb.co/KhqvJkM/peppaok-5.gif);"></div>
+					<div class="grid__item-img effect-1"><img src="/img/music.png" style="width:65%;"></div>
 				</div>
 
 
@@ -98,7 +98,7 @@
 					<div class="grid__item-img effect"></div>
 				</div>
 				<div id="nope7" class="grid__item pos-7 effect-1">
-					<div class="grid__item-img effect-1"><img src="/img/music.png" style="width:54%;"></div>
+					<div class="grid__item-img effect-1"></div>
 				</div>
 
 				<div id="lol8" class="grid__item pos-8">
@@ -150,6 +150,7 @@
 				 				<!-- <a href="home.html" class="content__title-sub">enter</a> -->
 				 		<a href="home.html" class="content__title-sub font-wide justify-content-center align-self-center" style="z-index:2000;">323 HOURS</a>
 				 	</h2>
+					<h4 class="content__subtitle justify-content-center align-self-center">what can you do with the <span style="color:#E6E948;">time</span> you have?</h4>
 				 	</div>
 
 <!-- DIV LEVETTA + ON / OFF -->
