--- a/home.html
+++ b/home.html
@@ -50,33 +50,23 @@
 					<polygon points="700,84.4 1047.1,685.6 352.9,685.6 352.9,685.6 352.9,685.6 352.9,685.6"/>
 				</svg>
 			</div>
-			<div class="content content--fixed">
-				<header class="codrops-header">
-
-					<div class="codrops-links">
-
-						<svg class="decoshape" viewBox="0 0 200 100" width="100%" height="100%" preserveAspectRatio="none">
-							<path d="M 10.45,74.41 C 39.4,110.8 72.59,67.27 95.98,68.68 122.3,70.35 131.5,101.4 154.7,99.69 177.9,98.03 200.5,79.26 198.1,47.17 195.9,15.27 174.6,-0.3279 151.8,0.9941 128.6,2.581 126,16.86 107,22.76 88.26,28.67 88.87,12.36 60.37,1.787 31.79,-8.877 -18.61,37.92 10.45,74.41 Z" />
-						</svg>
-
+			<header class="header space2">
+				<div class="header-wrapper">
+					<div class="nav-but-wrap">
+						<a href="index.html" class="hover-target animsition-link padding-element-l">
+							<h4>323 hours</h4>
+						</a>
+						<a href="about.html" class=" roba hover-target animsition-link padding-element">
+							<h4>About</h4>
+						</a>
+						<a href="combinations.html" class=" roba hover-target animsition-link padding-element">
+							<h4>All combinations</h4>
+						</a>
+						<div class="menu-icon hover-target">
+						</div>
 					</div>
-
-				</header>
-
-				<a class="pater" href="http://synd.co/2pHxJny">
-		<svg class="pater__deco" width="300" height="240" viewBox="0 0 1000 800">
-			<path d="M27.4,171.8C73,42.9,128.6,1,128.6,1s0,0,0,0c58.5,0,368.3,0.3,873.2,0.8c38.5,211,42.1,373.5,38.9,476.7c-2.5,80.3-10.6,174.9-76.7,247.8c-15.1,16.6-37.4,41.2-72.8,53.9c-92.4,33.1-173-50.8-283.9-99.4c-224.3-98.4-334.9,51.4-472.2-45.6C-6.3,535.2-14.5,290.6,27.4,171.8z"/>
-		</svg>
-		<a href="combinations.html">	<h6 class="pater__title">about</h6> </a>
-
-		<h6 class="pater__title">Credits</h6>
-		<br>
-					 <p class="pater__desc">Final Synthesis<br> Design Studio - Infopoetry <br> a project by @claudiacut</p>
-	</a>
-				<div class="deco deco--title">323 hours</div>
-
-
-			</div>
+				</div>
+			</header>
 
 				<div class="position" id="shuffle">
 		<!--		<div class="button" id="shuffle"> <p>Shuffle</p></div> -->
