--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>323 hours</title>
 
-	<link rel="icon" type="image/png" href="ico/favicon.jpg">
+	<link rel="icon" type="image/png" href="/img/time.png">
 	<link rel="apple-touch-icon" href="ico/pple-touch-icon.jpg">
 	<link rel="apple-touch-icon" sizes="72x72" href="ico/apple-touch-icon-72x72.jpg">
 	<link rel="apple-touch-icon" sizes="114x114" href="ico/apple-touch-icon-114x114.jpg">
@@ -58,7 +58,7 @@
 
 
 				<div id="lol2" class="grid__item pos-2">
-					<div class="grid__item-img effect"><img src="/img/book.png" style="width:54%;"></div>
+					<div class="grid__item-img effect"><img src="/img/book.png" style="width:53%;"></div>
 				</div>
 				<div id="nope2" class="grid__item pos-2 effect-1">
 					<div class="grid__item-img effect-1"></div>
@@ -76,7 +76,7 @@
 					<div class="grid__item-img effect"><img src="/img/book.png" style="width:54%;"></div>
 				</div>
 				<div id="nope4" class="grid__item pos-4 effect-1">
-					<div class="grid__item-img effect-1"><img src="/img/book.png" style="width:50%;"></div>
+					<div class="grid__item-img effect-1"><img src="/img/book.png" style="width:48%;"></div>
 				</div>
 
 
@@ -170,7 +170,7 @@
 <!-- DIV STICKER -->
 
 					<div id="enter" class=" justify-content-center align-self-center">
-						<a href="home.html" ><img class="justify-content-right align-self-center stickerhome" src="img/enter.svg"></a>
+						<a href="home.html" ><img class="justify-content-right align-self-center stickerhome" src="img/time.png"></a>
 					</div>
 
 
