--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
 
 			<div class="content-wrap caso" id="1">
 				<div class="content content--layout content--layout-1">
-			<img class="content__img" src="img/time.png" alt="Some image" />
+			<img class="content__img" src="img/idea.png" alt="Some image" />
 			<h4 class="content__desc about-t">Covid has had an important impact on all our habits, prompting us to <span style="color:#E6E948;">create</span> new and intelligent solutions to continue to perform our daily lives in the best possible way.
 The quarantine limited our movements to the point that our only social relationships place inside our home via <span style="color:#E6E948;">videocall</span>.
 The activities did not stop and neither did the session of the Polytechnic, leaving us with the only possibility to work remotely. So I asked myself: How much time did I spend on videocall <span style="color:#E6E948;">during my sessions?</span>
@@ -83,7 +83,7 @@ The activities did not stop and neither did the session of the Polytechnic, leav
 			</div>
 			<div class="content-wrap caso" id="2">
 				<div class="content content--layout content--layout-2">
-					<img class="content__img" src="img/5.jpg" alt="Some image" />
+					<img class="content__img" src="img/translation.png" alt="Some image" />
 					<h1 class="content__title">Translation</h1>
 			<!--		<p class="content__author">Nikimo Westlane</p> -->
 					<h4 class="content__desc about-tt">The project aims to describe people’s <span style="color:#E6E948;">perception of time</span>: We are not aware of how much time we spent doing repetitive actions. The translation of a specific amount of time in different ways, like read a book or take a trip, lead the user to reflect about the <span style="color:#E6E948;">distortion</span> of time.</h4>
@@ -112,7 +112,7 @@ The activities did not stop and neither did the session of the Polytechnic, leav
 			<section class="content content--related">
 				<div class="content-wrap caso">
 					<div class="content content--layout content--layout-2">
-						<img class="content__img" src="img/3.jpg" alt="Some image" />
+						<img class="content__img" src="img/credits.png" alt="Some image" />
 						<h1 class="content__title">Credits</h1>
 				<!--		<p class="content__author">Jane Westhall</p> -->
 						<h4 class="content__desc" id="creditss">Final Synthesis Design Studio Infopoetry 2020/2021<br><br> 323 hours - Personal Data<br><br> Student: Claudia Maria Cutrupi <br>Professor: Salvatore Zingale</h4>
