--- a/combinations.html
+++ b/combinations.html
@@ -23,7 +23,7 @@
 	border: 2px solid white;
   color: #ffffff;
   width: 100%;
-  line-height: 100px;
+  line-height: 4em;
   text-align: center;
   margin: 2px;
   display: none;
