--- a/home.html
+++ b/home.html
@@ -82,7 +82,7 @@
 				<div class="content content--layout content--layout-1">
 			<img class="content__img" src="img/time.png" alt="Some image" />
 			<h4 class="content__desc">If you got your time back, how many things could you do?</h4>
-					<h1 class="content__title" id="tit">Get ready <br>to Rumble</h1>
+					<h1 class="content__title" id="tit">in 323 hours <br>you can:</h1>
 		<!--			<p class="content__author">Walter Mastricht</p> -->
 				<br>
 
